--- a/.github/workflows /build.yml
+++ b/.github/workflows /build.yml
@@ -2,7 +2,7 @@ name: build_Release
 on:
   push:
     branches:
-      - kfd
+      - main
     paths-ignore:
       - ".gitignore"
   workflow_dispatch:
